# flake8-no-module-forward-call

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/flake8_no_module_forward_call/: __init__.py  plugin.py
tests/: test_plugin.py
