[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-no-module-forward-call"
version = "0.1.1"
description = "Flake8 plugin to prohibit calling .forward() on objects (use obj(inputs) instead so DDP backward hooks run)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{ name = "Dmitrii Tarasov", email = "d.tarasov@airi.net" }]
classifiers = [
  "Framework :: Flake8",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/mrsndmn/flake8-no-module-forward-call"

[project.entry-points."flake8.extension"]
NMF001 = "flake8_no_module_forward_call.plugin:NoModuleForwardCallChecker"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["flake8_no_module_forward_call"]
